syntax = "proto3";

package user;

service UserService {
  rpc ListAllUsers (ListAllUsersRequest) returns (ListAllUsersResponse) {}
}

message UsersData {
  string email = 1;
  string password = 2;
  string role = 3;
}

// get User Info
message ListAllUsersRequest {
}

message ListAllUsersResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated UsersData data = 3;
}

